[workspace]
members = [
  "crates/dagger-codegen",
  "crates/dagger-sdk",
  "crates/dagger-core",
  "crates/dagger-bootstrap",
  "ci",
]

[workspace.dependencies]
dagger-codegen = { path = "crates/dagger-codegen", version = "^0.2.5" }
dagger-core = { path = "crates/dagger-core", version = "^0.2.10" }
dagger-bootstrap = { path = "crates/dagger-bootstrap", version = "^0.2.10" }
dagger-sdk = { path = "crates/dagger-sdk", version = "^0.2.19" }

eyre = "0.6.8"
color-eyre = "0.6.2"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
tokio = { version = "1.25.0", features = ["full"] }
tracing = { version = "0.1.37", features = ["log", "std"] }

tracing-subscriber = { version = "0.3.17", features = [
  "tracing-log",
  "tracing",
  "registry",
  "std",
] }
tracing-opentelemetry = { version = "0.18.0" }
opentelemetry = { version = "0.18.0", default-features = false, features = [
  "trace",
] }
opentelemetry-jaeger = "0.17.0"

thiserror = "1.0.40"
